# ex05-airllm-local

./: .env-example  .gitignore  PLAN.md  PRD.md  README.md  pyproject.toml  requirements.txt
config/: cost_config.json  logging_config.json  model_config.json  rate_limits.json
docs/: FINAL_COMPLIANCE_AUDIT.md  PRD_airllm_pipeline.md  PROMPTS.md  TODO.md
logs/: demo_chat_transcript.md
results/: baseline_b0.json  comparison.md  cost_summary.json  demo_chat.json  main_4bit_cuda.json  main_8bit_cuda.json  main_fp16_cpu.json  main_fp16_cuda.json  prepare_status.json
scripts/: demo_chat.py  make_figures.py  prepare_models.py  run_benchmarks.py  run_one.py
src/: benchmark.py  check_env.py  config.py  smoke_test.py  utils_model.py
src/orch5/: __init__.py  constants.py  main.py
src/orch5/sdk/: __init__.py  sdk.py
src/orch5/services/: __init__.py  analysis.py  benchmark.py  cost.py  env_check.py  model_prep.py
src/orch5/shared/: __init__.py  config.py  gatekeeper.py  samplers.py  version.py
tests/: conftest.py
tests/integration/: test_smoke.py
tests/unit/: test_analysis.py  test_config.py  test_cost.py  test_env_check.py  test_gatekeeper.py  test_records_sdk.py  test_samplers.py
