[project]
name = "ex05-airllm-local"
version = "1.00"
description = "EX05 — Running a massive LLM locally via AirLLM, quantization & benchmarking (RTX 3070, 8 GB)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

# Pinned on purpose: newer releases break AirLLM 2.11 (see docs/PLAN.md / docs/PRD.md).
# torch comes from the CUDA 12.4 index configured under [tool.uv.sources] below.
dependencies = [
    "torch==2.4.1",
    "airllm==2.11.0",
    "transformers==4.44.2",
    "tokenizers==0.19.1",
    "huggingface-hub==0.24.7",
    "optimum==1.23.3",
    "accelerate==0.34.2",
    "safetensors==0.4.5",
    "bitsandbytes==0.44.1",
    "sentencepiece==0.2.0",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "pandas==2.2.3",
    "psutil==6.1.0",
    "nvidia-ml-py==12.560.30",
    "matplotlib==3.9.2",
    "datasets==2.21.0",
]

[dependency-groups]
dev = ["ruff==0.6.9", "pytest==8.3.3", "pytest-cov==5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orch5"]

# torch from the CUDA 12.4 wheel index (RTX 3070 / Ampere).
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["src/**/main.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85
